tests/compiler_errors/fn_invalid_signature.tlp
fn foo int -> do end 